2025-06-06T02:05:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15481210770 # 1021
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-06
* notice: last 14d: unq all: 16 76
* notice: prev accum: outdated-unq outdated-all / unq all: 1094 5533 / 1113 5613
* notice: next accum: outdated-unq outdated-all / unq all: 1095 5537 / 1113 5613
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-22] / []

2025-06-05T02:06:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15456763079 # 1019
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-05
* notice: last 14d: unq all: 16 80
* notice: prev accum: outdated-unq outdated-all / unq all: 1094 5533 / 1111 5593
* notice: next accum: outdated-unq outdated-all / unq all: 1094 5533 / 1113 5613
* notice: prev exec diff / last date diff / accum: unq all: +2 +20 -0 -0 / +2 +20 -0 -0 / 2 20
* notice: removed / changed dates: [] / [2025-06-04]

2025-06-04T02:08:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15431901939 # 1017
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-04
* notice: last 14d: unq all: 14 60
* notice: prev accum: outdated-unq outdated-all / unq all: 1090 5526 / 1111 5593
* notice: next accum: outdated-unq outdated-all / unq all: 1094 5533 / 1111 5593
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-20] / []

2025-06-03T12:55:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15417895328 # 1016