@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-06T02:05:58Z",
-  "count_outdated" : 5537,
-  "uniques_outdated" : 1095,
+  "timestamp" : "2025-06-06T12:53:01Z",
+  "count_outdated" : 5539,
+  "uniques_outdated" : 1097,
   "count" : 5613,
   "uniques" : 1113,
   "views" : [
-    {
-      "timestamp": "2025-05-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-05-24T00:00:00Z",
       "count": 24,
