@@ -1,12 +1,7 @@
 {
-  "count": 76,
-  "uniques": 16,
+  "count": 74,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2025-05-23T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-05-24T00:00:00Z",
       "count": 24,
