@@ -1,3 +1,12 @@
+2025-06-06T12:53:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15491002110 # 1022
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-06
+* notice: last 14d: unq all: 14 74
+* notice: prev accum: outdated-unq outdated-all / unq all: 1095 5537 / 1113 5613
+* notice: next accum: outdated-unq outdated-all / unq all: 1097 5539 / 1113 5613
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-05-23] / []
+
 2025-06-06T02:05:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15481210770 # 1021
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-06
